--- a/KosaESS/src/main/resources/templates/admin/class_form.html
+++ b/KosaESS/src/main/resources/templates/admin/class_form.html
@@ -29,7 +29,7 @@
 			<div class="title" th:text="${title}">title</div>
 			<!-- Route -->
 			<div class="route">
-				> <a th:href="@{/admin}">대시보드</a> > <a th:href="@{/admin/class}">교육과정
+				<a th:href="@{/admin}">대시보드</a> > <a th:href="@{/admin/class}">교육과정
 					관리</a> > <a th:href="@{/admin/class/__${act}__}" th:text="${title}">title</a>
 			</div>
 		</div>
@@ -41,7 +41,7 @@
 			<!-- 컨텐츠 내용 부분 -->
 			<form th:action="@{/admin/class/__${act}__}" method="post"
 				enctype="multipart/form-data">
-
+				<input id="clssId" type="hidden" th:value="${classVO.clssId}">
 				<div class="class_form_content">
 
 					<!-- 첫번째 줄 -->
@@ -290,8 +290,7 @@
 										<input type="hidden" id="clss_total_tm" th:name="clssTotalTm"
 											th:value="0">
 										<div>
-											총 이수시간 : 
-											<span th:if="${act}=='insert'"
+											총 이수시간 : <span th:if="${act}=='insert'"
 												class="class_total_tm">0</span> <span
 												th:if="${act}=='update'" class="class_total_tm"
 												th:text="${classVO.clssTotalTm}">0</span> <span
@@ -332,14 +331,13 @@
 									<div class="file_list">
 										<div class="file_wrap" th:each="file, iterStat : ${fileList}">
 											<div class="file_input">
-												<input
-													type="text" th:name="fileId" th:value="${file.fileNm}"
-													onchange="fileChange(this)" readonly /> 
-												<input type="hidden" th:value="${file.fileSubId}"> 
-												<label>
-													첨부파일 <input id="file" type="file" name="files"
+												<input type="text" th:name="fileId"
+													th:value="${file.fileNm}" onchange="fileChange(this)"
+													readonly /> <input type="hidden"
+													th:value="${file.fileSubId}"> <label> 첨부파일
+													<input id="file" type="file" name="files"
 													onchange="selectFile(this);" />
-												
+
 
 												</label>
 											</div>
@@ -359,7 +357,11 @@
 								<div th:if="${act}=='select'" class="file_detail" id="file_drag">
 									<div th:each="file: ${fileList}" style="display: flex;">
 										<img style="width: 30px;" th:src="@{/img/file_gray.png}">
-										<div><a style="text-decoration-line: none; color:#0E5881;" th:href="@{/download/file/__${file.fileId}__/__${file.fileSubId}__}" th:text="${file.fileNm}"></a></div>
+										<div>
+											<a style="text-decoration-line: none; color: #0E5881;"
+												th:href="@{/download/file/__${file.fileId}__/__${file.fileSubId}__}"
+												th:text="${file.fileNm}"></a>
+										</div>
 									</div>
 								</div>
 
@@ -391,11 +393,11 @@
 				<!-- select일 때 -->
 				<div th:if="${act}=='select'"
 					style="display: flex; justify-content: center;">
-					<div class="submit_btn">
-						<a style="color:#fff;text-decoration-line: none;"th:href="@{/admin/class/delete/__${classVO.clssId}__}">삭제하기</a>
+					<div class="submit_btn" onclick="deleteClass()">삭제하기
 					</div>
 					<div class="submit_btn">
-						<a style="color:#fff;text-decoration-line: none;" th:href="@{/admin/class/update/__${classVO.clssId}__}">수정하기</a>
+						<a style="color: #fff; text-decoration-line: none;"
+							th:href="@{/admin/class/update/__${classVO.clssId}__}">수정하기</a>
 					</div>
 				</div>
 			</form>
@@ -824,6 +826,22 @@
         		console.log(nextInput.value);
     		}
 		}
+	    
+	    //삭제하기
+	  function deleteClass(){
+	    	var classId = document.querySelector("#clssId").value;
+	    	console.log(classId);
+	    	$.ajax({
+				url : "/admin/cls/delete/"+classId, // 컨트롤러 엔드포인트
+				type : "POST",
+				success : function(response) {
+					alert("삭제되었습니다.");
+					location.href = "http://localhost:8080/admin/class";
+				},
+				error : {
+				}
+	    	});
+	    }
 	</script>
 </body>
 </html>
