--- a/KosaESS/src/main/resources/templates/student/class_detail.html
+++ b/KosaESS/src/main/resources/templates/student/class_detail.html
@@ -22,7 +22,7 @@
 						<th>이름</th>
 						<td colspan="5" th:text="${classDetail.clssNm}"></td>
 						<th>교육 상태</th>
-						<td style="width: 10%;" th:text="${classDetail.clssCdNm}"></td>
+						<td style="width: 10%;" th:text="${classDetail.cmcdNm}"></td>
 					</tr>
 					<tr>
 						<th>지원 기간</th>
@@ -60,12 +60,12 @@
 					</div>
 					<div>
 						<h3>교육 커리큘럼</h3>
-						<table class="crclTable" style="margin-bottom: 10%;">
+						<table class="crclTable" style="margin-bottom: 10%; width: 100%;">
 							<tr>
 								<th>강의명</th>
-								<th>과목명</th>
-								<th style="width: 23%;">강사이름</th>
-								<th style="width: 23%;">이수시간</th>
+								<th style="width: 20%;">과목명</th>
+								<th style="width: 24%;">강사이름</th>
+								<th style="width: 15%;">이수시간</th>
 							</tr>
 							<tr th:each="CurriculumDetailDTO : ${curriculumlist}">
 								<td style="width: 35%;" th:text="${CurriculumDetailDTO.lctrNm}"></td>
@@ -110,12 +110,12 @@
 				<ul style="padding: 0;">
 					<li th:if="${class2 != null}">
 						<div class="veiwClass1">
-							<span th:text="${class2.clssCdNm}"></span>
+							<span th:text="${class2.cmcdNm}"></span>
 							<h2 th:text="${class2.clssNm}"></h2>
-							<div th:if="${class2.clssContent!=null}">
-								<img th:src="@{/img/__${class2.clssContent}__}">
+							<div th:if="${class2.fileNm!=null}">
+								<img th:src="@{/img/__${class2.fileNm}__}">
 							</div>
-							<div th:if="${class2.clssContent==null}">
+							<div th:if="${class2.fileNm==null}">
 								<img th:src="@{/img/logo.png}">
 							</div>
 							<a class="moveBtn"
@@ -124,12 +124,12 @@
 					</li>
 					<li th:if="${class1 != null}">
 						<div class="veiwclass2">
-							<span th:text="${class1.clssCdNm}"></span>
+							<span th:text="${class1.cmcdNm}"></span>
 							<h2 th:text="${class1.clssNm}"></h2>
-							<div th:if="${class1.clssContent!=null}">
-								<img th:src="@{/img/__${class1.clssContent}__}">
+							<div th:if="${class1.fileNm!=null}">
+								<img th:src="@{/img/__${class1.fileNm}__}">
 							</div>
-							<div th:if="${class1.clssContent==null}">
+							<div th:if="${class1.fileNm==null}">
 								<img th:src="@{/img/logo.png}">
 							</div>
 							<a class="moveBtn"
