[seungwoo][#etc] pull 받기 전 임시 저장

--- a/KosaESS/src/main/resources/templates/manager/student_list.html
+++ b/KosaESS/src/main/resources/templates/manager/student_list.html
@@ -74,7 +74,7 @@
 				</div>
 			</div>
 			<!-- End 검색 버튼 -->
-			<span th:text="|${stdtCnt} 명|" id="stdtCnt"></span> <span
+			<span th:text="${stdtCnt}" id="stdtCnt"></span><span>명</span> <span
 				th:each="cmptCodeName:${cmptCodeNameList}"><button
 					th:value="${cmptCodeName.cmcdId}" th:text="${cmptCodeName.cmcdNm}"></button></span>
 			<table id="stdt_list_table">
@@ -109,24 +109,12 @@
 	</div>
 
 	<script>
-	const url = window.location.search;//현재 창의 주소값
-	const urlParams = url.searchParams;//url에서 파라미터만 가져옴
-	var classId = document.getElementById('classId').options[document.getElementById('classId').selectedIndex].value;
-	var startDate = document.getElementById("startDate").value;
-	var endDate = document.getElementById("endDate").value;
-	var date = new Date();
-	var year = date.getFullYear();
-	const searchButton = document.getElementById("searchButton");
 
 	/*숫자 값을 00 형식으로 맞춰줌*/
 	function leftPad(value) {if (value >= 10) {return value;}return `0${value}`;}
 	/*날짜 넣으면 YYYY-MM-DD로 반환해주며, 2번째 인자로 delimiter 지정 가능*/
 	/* 예시 >>> toStringByFormatting(new Date(2021, 0, 1)); */
 	function toStringByFormatting(source, delimiter = '-') {const year = source.getFullYear();const month = leftPad(source.getMonth()+1);const day = leftPad(source.getDate());return [year, month, day].join(delimiter);}
-	/*이번 달의 첫 날*/
-	function getFirstDay(){var month = ("0" + (1 + date.getMonth())).slice(-2);var day = "01";return year + "-" + month + "-" + day;}
-	/*이번 달의 마지막 날*/
-	function getLastDay(){var month = ("0" + (1 + date.getMonth())).slice(-2);var lastDay = new Date(year,month, 0).getDate();return year + "-" + month + "-" + lastDay;}
 // 	/*startDate=="" 라면 startDate = 이번 달의 첫 날*/
 // 	if (startDate == ""){startDate = toStringByFormatting(new Date(date.getFullYear(), date.getMonth(), 1));}
 // 	/*endDate=="" 라면 endtDate = 이번 달의 마지막 날*/
@@ -134,47 +122,63 @@
 	
 	//		window.location.href = "/manager/student?startDate=" + startDate + "&endDate=" + endDate+ "&classId=" + classId;
 	function search() {
-		if(startDate==""){startDate=getFirstDay();}
-		if(endDate==""){endDate=getLastDay();}
+		var classId = document.getElementById('classId').options[document.getElementById('classId').selectedIndex].value;
+		var stdtListTable = document.getElementById("stdt_list_table");
+		stdtListTable.removeChild(stdtListTable.childNodes[0]);
+		
+// 		const url = window.location.search;//현재 창의 주소값
+// 		const urlParams = url.searchParams;//url에서 파라미터만 가져옴
+// 		var startDate = document.getElementById("startDate").value;
+// 		var endDate = document.getElementById("endDate").value;
+// 		var date = new Date();
+// 		var year = date.getFullYear();
+// 		const searchButton = document.getElementById("searchButton");
+// 	/*이번 달의 첫 날*/
+// 	function getFirstDay(){var month = ("0" + (1 + date.getMonth())).slice(-2);var day = "01";return year + "-" + month + "-" + day;}
+// 	/*이번 달의 마지막 날*/
+// 	function getLastDay(){var month = ("0" + (1 + date.getMonth())).slice(-2);var lastDay = new Date(year,month, 0).getDate();return year + "-" + month + "-" + lastDay;}
+// 		if(startDate==""){startDate=getFirstDay();}
+// 		if(endDate==""){endDate=getLastDay();}
 		$.ajax({
 			type:'get',
 			url:'/manager/student/search', // 서버의 엔드포인트 URL
 			/*data: { classId<<컨트롤러에서 받는 위치: classId<<클라이언트가 보내는거})*/
-			data: {classId:classId,startDate:startDate,endDate:endDate
+			data: {classId:classId
+// 				,startDate:startDate,endDate:endDate
 			},
 			success: function(response) {
-				var stdtListTable = document.getElementById("stdt_list_table");
-				var stdtList = document.getElementById("stdt_list");
-				stdtListTable.removeChild(stdtListTable.childNodes[0]);
-				document.getElementById("stdtCnt").text="0";
-// 				$('#stdtCnt').HTML('0');
+				var stdtList = response.stdtList;
+				document.getElementById("stdtCnt").innerHTML=stdtList.length;
 				var classListCode=
 					'<tr>'+
 					'<th><input type="checkbox" id="chkAllStdt"></th>'+
 					'<th>번호</th>'+
-					'<th>이름</th>'+
-					'<th th:each="wlogCodeName:${wlogCodeNameList}" th:text="${wlogCodeName.cmcdNm}"></th>'+
-					'<th>성별</th>'+
+					'<th>이름</th>';
+// 					for(){
+// 					'<th th:each="wlogCodeName:${wlogCodeNameList}" th:text="${wlogCodeName.cmcdNm}"></th>';
+// 					}
+					classListCode+='<th>성별</th>'+
 					'<th>생년월일</th>'+
 					'<th>이메일</th>'+
 					'<th>연락처</th>'+
-					'<th>이수여부</th>'
+					'<th>이수여부</th>';
 					'</tr>';
-				for(var i = 0; i < response.length; i++){
+				for(var i = 0; i < stdtList.length; i++){
 					classListCode +=
 					'<tr">'+
 						'<td><input type="checkbox" id="chkStdt"></td>'+
 						'<td>'+ (i+1) +'</td>'+
-						'<td>'+ response.stdtNm +'</td>'+
-						'<td>'+ response.wlogCnt +'</td>'+
-						'<td>'+ response.genderCd +'</td>'+
-						'<td>'+ response.birthDd +'</td>'+
-						'<td>'+ response.userEmail +'</td>'+
-						'<td>'+ response.stdtTel +'</td>'+
-						'<td>'+ response.jobCd +'</td>'+
+						'<td>'+ stdtList[i].stdtNm +'</td>'+
+						'<td>'+ stdtList[i].wlogCnt +'</td>'+
+						'<td>'+ stdtList[i].genderCd +'</td>'+
+						'<td>'+ stdtList[i].birthDd +'</td>'+
+						'<td>'+ stdtList[i].userEmail +'</td>'+
+						'<td>'+ stdtList[i].stdtTel +'</td>'+
+						'<td>'+ stdtList[i].jobCd +'</td>'+
 					'</tr>';
 				}
-				classListTable.innerHTML=classListCode;
+				console.log(classListCode);
+				stdtListTable.innerHTML=classListCode;
 			},error: function(error){
 				console.log("error: ", error);
 			}
